# Airplane-Battle

./: CMakeLists.txt  README.md
src/Goodie/: Goodie.cpp  Goodie.h
src/Others/: Others.cpp  Others.h
src/PartForYou/: GameObjects.cpp  GameObjects.h  GameWorld.cpp  GameWorld.h
src/Projectile/: Projectile.cpp  Projectile.h
src/Ship/: Enemy.cpp  Enemy.h  Ship.cpp  Ship.h
